[gd_scene load_steps=2 format=3 uid="uid://bv047ljwq6ve0"]

[ext_resource type="Script" uid="uid://dp1snfb0gjob2" path="res://scripts/remove_popup.gd" id="1_paho4"]

[node name="PopUpColorRect" type="ColorRect"]
offset_right = 225.0
offset_bottom = 160.0
color = Color(0.184161, 0.305806, 0.305806, 1)
script = ExtResource("1_paho4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="TextHBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2

[node name="HabitLabel" type="Label" parent="MarginContainer/TextHBox" groups=["TextObjects"]]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1

[node name="DeleteButton" type="Button" parent="MarginContainer/TextHBox" groups=["TextObjects"]]
layout_mode = 2
text = "Delete"

[node name="DisableButton" type="Button" parent="MarginContainer/TextHBox" groups=["TextObjects"]]
layout_mode = 2
text = "Disable
"

[node name="CancelButton" type="Button" parent="MarginContainer/TextHBox" groups=["TextObjects"]]
layout_mode = 2
text = "Cancel"

[connection signal="pressed" from="MarginContainer/TextHBox/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="MarginContainer/TextHBox/DisableButton" to="." method="_on_disable_button_pressed"]
[connection signal="pressed" from="MarginContainer/TextHBox/CancelButton" to="." method="_on_cancel_button_pressed"]
